# codeartifact-tutorial-pypi

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
hello_package/: main.py
tests/: test_main.py
