[tool.poetry]
name = "hello-package"
version = "0.1.0"
description = "This is a test package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
color-it = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pre-commit = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
